extends chunking